--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
         km: {
             title: "ដាក់ស៊ុមរូបថតរបស់អ្នក",
             subtitle_upload: "បញ្ចូលស៊ុម និងរូបថតដើម្បីចាប់ផ្តើម។",
-            subtitle_editor: "ปรับរូបภาพของคุณ แล้วบันทึก!",
+            subtitle_editor: "កែតម្រូវរូបថតរបស់អ្នក បន្ទាប់មករក្សាទុក!",
             upload_frame: "១. បញ្ចូលរូបភាពស៊ុម",
             upload_photo: "២. បញ្ចូលរូបថតរបស់អ្នក",
-            instructions: "អូសដើម្បីเลื่อน, หยิกหรือเลื่อนเพื่อซูม។",
+            instructions: "អូសដើម្បីរំកិល​ ឬខ្ទាស់ដើម្បីពង្រីក",
             button_change: "ផ្លាស់ប្តូរ",
             button_download: "ទាញយក",
             button_share: "ចែករំលែក",
