--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Image Frame Generator</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Noto+Sans+Khmer:wght@400;500;700&display=swap" rel="stylesheet">
@@ -387,7 +388,6 @@
             const blob = await response.blob();
             const file = new File([blob], 'framed-photo.png', { type: blob.type });
             if (navigator.share && navigator.canShare({ files: [file] })) {
-                // Removed title and text from the share data
                 await navigator.share({
                     files: [file]
                 });
@@ -405,3 +405,5 @@
 </script>
 </body>
 </html>
+
+I've added the favicon link to the <head> section of the HTML. Once you place the favicon.png file in the same folder as your HTML file, the icon will appear in the browser tab.
