--- a/index.html
+++ b/index.html
@@ -4,7 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Image Frame Generator</title>
+    
+    <!-- Standard Favicon -->
     <link rel="icon" type="image/png" href="favicon.png">
+
+    <!-- Apple Touch Icon for iOS Home Screen -->
+    <link rel="apple-touch-icon" href="favicon.png">
+
+    <!-- Web App Manifest for Android Home Screen -->
+    <link rel="manifest" href="data:application/manifest+json,{
+        &quot;name&quot;: &quot;Frame Your Photo&quot;,
+        &quot;short_name&quot;: &quot;Frame Photo&quot;,
+        &quot;start_url&quot;: &quot;.&quot;,
+        &quot;display&quot;: &quot;standalone&quot;,
+        &quot;background_color&quot;: &quot;#ffffff&quot;,
+        &quot;theme_color&quot;: &quot;#4f46e5&quot;,
+        &quot;icons&quot;: [
+            {
+                &quot;src&quot;: &quot;favicon.png&quot;,
+                &quot;sizes&quot;: &quot;192x192&quot;,
+                &quot;type&quot;: &quot;image/png&quot;
+            },
+            {
+                &quot;src&quot;: &quot;favicon.png&quot;,
+                &quot;sizes&quot;: &quot;512x512&quot;,
+                &quot;type&quot;: &quot;image/png&quot;
+            }
+        ]
+    }">
+    <meta name="theme-color" content="#4f46e5">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Noto+Sans+Khmer:wght@400;500;700&display=swap" rel="stylesheet">
@@ -405,5 +434,3 @@
 </script>
 </body>
 </html>
-
-I've added the favicon link to the <head> section of the HTML. Once you place the favicon.png file in the same folder as your HTML file, the icon will appear in the browser tab.
