--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- Standard Favicon -->
     <link rel="icon" type="image/png" href="favicon.png">
 
-    <!-- Apple Touch Icon for iOS Home Screen -->
+    <!-- Apple Touch Icon for iOS Home Screen. -->
     <link rel="apple-touch-icon" href="favicon.png">
 
-    <!-- Web App Manifest for Android Home Screen -->
+    <!-- Web App Manifest for Android Home Screen. -->
     <link rel="manifest" href="data:application/manifest+json,{
         &quot;name&quot;: &quot;Frame Your Photo&quot;,
         &quot;short_name&quot;: &quot;Frame Photo&quot;,
